--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
+    "react-slick": "^0.29.0",
     "react-tabs": "^6.0.2",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.9.0",
     "swiper": "^11.0.3"
